--- a/frontend/project-games/src/app/components/games-list/games-list.component.html
+++ b/frontend/project-games/src/app/components/games-list/games-list.component.html
@@ -1,8 +1,8 @@
 <section>
 <form class="example-form">
   <mat-form-field class="search-input" appearance="fill">
-    <mat-label>Please, search in lowerCase</mat-label>
-    <input matInput placeholder="Ex: fortnite" #input (keyup)="search(input.value)">
+    <mat-label>Search</mat-label>
+    <input matInput placeholder="Ex: Fortnite" #input (keyup)="search(input.value)">
   </mat-form-field>
   <mat-checkbox class="completed-filter"
   labelPosition="before"
